- Rudi, Thu Feb  1 13:27:15 MET 2007
  Created the file HISTORY and the file README.DEV